--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
             <label><strong> De qual lado da aplicação você desenvolve?</strong></label>
             <label>
-                <input type="radio" nome="devweb" value="frontend" checked>Front-end
+                <input type="radio" nome="devweb" value="frontend">Front-end
             </label>
             <label>
                 <input type="radio" nome="devweb" value="backend">Back-end
