--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 
             <div>
                 <label for="sobrenome"><strong>Sobrenome</strong></label>
-                <input type="text" nome="sobrenome" id="sobrenome" required>
+                <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
         </fieldset>
 
         <div class="campo">
             <label for="email"><strong>Email</strong></label>
-            <input type="email" nome="email" id="email" required>
+            <input type="email" name="email" id="email" required>
         </div>
 
         <div>
             <label><strong> De qual lado da aplicação você desenvolve?</strong></label>
             <label>
-                <input type="radio" nome="devweb" value="frontend">Front-end
+                <input type="radio" name="devweb" value="frontend" checked>Front-end
             </label>
             <label>
-                <input type="radio" nome="devweb" value="backend">Back-end
+                <input type="radio" name="devweb" value="backend">Back-end
             </label>
             <label>
-                <input type="radio" nome="devweb" value="fullstack">Full-stack
+                <input type="radio" name="devweb" value="fullstack">Full-stack
             </label>
         </div>
         <div class="campo">
@@ -55,27 +55,27 @@
         <fieldset class="grupo"> 
             <div id="checkbox">
                 <label><strong>Selecione as tecnologias que utiliza:</strong></label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="HTML">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="HTML">
                 <label for="tecnologial">HTML</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="CSS">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="CSS">
                 <label for="tecnologial">CSS</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="Javascript">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="Javascript">
                 <label for="tecnologial">Javascript</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial"value="PHP">
+                <input type="checkbox" id="tecnologial" name="tecnologial"value="PHP">
                 <label for="tecnologial">PHP</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="C#">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="C#">
                 <label for="tecnologial">C#</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="Python">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="Python">
                 <label for="tecnologial">Python</label>
-                <input type="checkbox" id="tecnologial" nome="tecnologial" value="Java">
+                <input type="checkbox" id="tecnologial" name="tecnologial" value="Java">
                 <label for="tecnologial">Java</label>
             </div>
-        </fieldset>
+        </fieldseta>
 
         <div>
             <br>
             <label for="experiencia"><strong>Conte um pouco da sua experiência:</strong></label>
-            <textarea row="6" style="width: 26em" id="experiencia" nome="experiencia"></textarea>
+            <textarea row="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
         </div>
 
         <button class="botao" type="submit" onsubmit="">Concluido</button>
