--- a/index.html
+++ b/index.html
@@ -3,85 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="formulario.css" media="">
-    <title>Cadastro</title>
+    <title>dev.finance $</title>
+
+    <link rel ="stylesheet"  href="style.css">
+    <link rel="preconnect" href="https:fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <h1 id="titulo">Cadastro de Devs</h1>
-        <p id="subtitulo">complete suas informações</p>
-    </div>
+    <header>
+        <h1 id="logo">dev.finance$</h1>
+        </header>
 
-    <form>
-        <fieldset class="grupo">
-            <div>
-                <label for="nome"><strong>Nome</strong></label>
-                <input type="text" name="nome" id="nome" required>
-            </div>
+        <main class="container">
+            <section id="balance">
+                <h2>Balanço</h2>
 
-            <div>
-                <label for="sobrenome"><strong>Sobrenome</strong></label>
-                <input type="text" name="sobrenome" id="sobrenome" required>
-            </div>
-        </fieldset>
+                <div class="card">
+                    <h3>Entradas</h3>
+                    <p>R$ 5.000,00</p>
+                </div>
 
-        <div class="campo">
-            <label for="email"><strong>Email</strong></label>
-            <input type="email" name="email" id="email" required>
-        </div>
+                <div class="card">
+                    <h3>Saídas</h3>
+                    <p>R$ 2.000,00</p>
+                </div>
 
-        <div>
-            <label><strong> De qual lado da aplicação você desenvolve?</strong></label>
-            <label>
-                <input type="radio" name="devweb" value="frontend" >Front-end
-            </label>
-            <label>
-                <input type="radio" name="devweb" value="backend">Back-end
-            </label>
-            <label>
-                <input type="radio" name="devweb" value="fullstack">Full-stack
-            </label>
-        </div>
-        <div class="campo">
-            <label for="senioridade"><strong>Senioridade</strong></label>
-            <select id="senioridade" required>
-                <option selected disabled value="">Selecione</option>
-                <option>Júnior</option>
-                <option>Pleno</option>
-                <option>Sênior</option>
-            </select>
+                <div class="card total">
+                    <h3>Total</h3>
+                    <p>R$ 3.000,00</p>
+                </div>
 
-        </div>
-        <fieldset class="grupo"> 
-            <div id="checkbox">
-                <label><strong>Selecione as tecnologias que utiliza:</strong></label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="HTML">
-                <label for="tecnologial">HTML</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="CSS">
-                <label for="tecnologial">CSS</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="Javascript">
-                <label for="tecnologial">Javascript</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial"value="PHP">
-                <label for="tecnologial">PHP</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="C#">
-                <label for="tecnologial">C#</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="Python">
-                <label for="tecnologial">Python</label>
-                <input type="checkbox" id="tecnologial" name="tecnologial" value="Java">
-                <label for="tecnologial">Java</label>
-            </div>
-        </fieldseta>
+            </section>
 
-        <div>
-            <br>
-            <label for="experiencia"><strong>Conte um pouco da sua experiência:</strong></label>
-            <textarea row="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
-        </div>
+            <section id="transaction">
+                <h2>Transações</h2>
+                <table id="data-table">
+                    <thead>
+                        <tr>
+                            <th>Descrição</th>
+                            <th>Valor</th>
+                            <th>Data</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="description">Luz</td>
+                            <td class="expense">- R$500,00</td>
+                            <td class="date">23\01\2021</td>
+                        </tr>
+                        <tr>
+                            <td class="description">Criação website</td>
+                            <td classs="income">R$ 5.000,00</td>
+                            <td class="date">23\01\2021</td>
+                        </tr>
+                        <tr>
+                            <td class="description">Internet</td>
+                            <td class="expense">- R$200,00</td>
+                            <td class="date">23\01\2021</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+        
 
-        <button class="botao" type="submit" onsubmit="">Concluido</button>
-
-
-
-    </form>
-</body>
+        <footer><p>dev.fiance$</p></footer>
+    </body>
 </html>
